fix horizontal scroll on mobile

--- a/css/responsive_design.css
+++ b/css/responsive_design.css
@@ -203,6 +203,10 @@
 
 @media screen and (max-width: 568px) {
 
+    html, body{
+        overflow-x: hidden;
+    }
+
     /*------------------*\
          HEBERGEMENTS
     \*------------------*/
